--- a/servicios.html
+++ b/servicios.html
@@ -3,27 +3,40 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Informacion de EndoClinic">
-	  <meta name="keywords" content="Informacion y registro">
-  	<meta name="author" content="Jesus Chavez, Christian Perez, Daniel Alejandor, Juan Gaxiola, Eduardo Torres">
+  
     <title>EndoClinic | Doctores</title>
-    <link rel="stylesheet" href="css/estilos.css">
+<link rel="stylesheet" href="css/bootstrap.min.css" />
+<title>Ky Works | Servicios</title>
   </head>
   <body>
-    <header>
-      <div class="contenedor">
-        <div id="marca">
-
+<nav class="navbar navbar-expand-md navbar-dark bg-primary" style="">
+  <div class="container"> <a class="navbar-brand" href="#" style="">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-11 ml-1" style="">
+              <img class="img-fluid d-block rounded" src="img/Sin título-1.png" width="70 80 80" height="80">
+              <p class="mb-0">WORKS</p>
+            </div>
+          </div>
         </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li class="actual"><a href="servicios.html">Doctores</a></li>
-             <li><a href="contacto.html">Registrate</a></li>
-          </ul>
-        </nav>
       </div>
+    </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar16">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar16">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"> <a class="nav-link" onclick="location.href='index.html'">Inicio</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">Acerca de nostros</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">Privacidad</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">FAQ</a> </li>
+      </ul> <a class="btn navbar-btn ml-md-2 btn-light text-dark">Ofrecer Empleo</a>
+    </div>
+  </div>
+</nav>
+
+    <header>
+      
     </header>
 
     <section id="boletin">
@@ -72,4 +85,7 @@
       <p>EndoClinic, Copyright &copy; 2017</p>
     </footer>
   </body>
+<script src="js/pooper.min.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </html>
