--- a/index.html
+++ b/index.html
@@ -1,91 +1,73 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Informacion de EndoClinic">
-	  <meta name="keywords" content="Informacion y registro">
-  	<meta name="author" content="Jesus Chavez, Christian Perez, Daniel Alejandor, Juan Gaxiola, Eduardo Torres">
-    <title>EndoClinic | Bienvenidos</title>
-    <link rel="stylesheet" href="css/estilos.css">
-  </head>
-  <body>
-    <header>
-      <div class="contenedor">
-        <div id="marca">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <meta name="description" content="Informacion de EndoClinic">
+  <meta name="keywords" content="Informacion y registro">
+  <meta name="author" content="">
+  <title>Ky Works | Inicio</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark bg-primary" style="">
+    <div class="container"> <a class="navbar-brand" href="#" style="">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-md-11 ml-1" style="">
+                <img class="img-fluid d-block rounded" src="img/Sin título-1.png" width="70 80 80" height="80" href="contacto.html">
+                <p class="mb-0">WORKS</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <nav>
-          <ul>
-            <li class="actual"><a href="index.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicios.html">Doctores</a></li>
-            <li><a href="contacto.html">Registrate</a></li>
-          </ul>
-        </nav>
+      </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
+        data-target="#navbar16">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar16">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"> <a class="nav-link" href="#">Empresas</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">Acerca de nostros</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">Privacidad</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">FAQ</a> </li>
+        </ul> <a class="btn navbar-btn ml-md-2 btn-light text-dark">Ofrecer Empleo</a>
       </div>
-    </header>
+    </div>
+  </nav>
+<header>
 
-    <section id="cabecera">
-      <div class="contenedor">
-
-      	  <div class="fotos" style="max-width:500px">
-    <img class="mySlides" src="img/baner1.png" >
-    <img class="mySlides" src="img/baner2.png" >
-    <img class="mySlides" src="img/baner3.png" >
-  </div>
-  <script>
-  var myIndex = 0;
-  carousel();
-  function carousel() {
-      var i;
-      var x = document.getElementsByClassName("mySlides");
-      for (i = 0; i < x.length; i++) {
-         x[i].style.display = "none";
-      }
-      myIndex++;
-      if (myIndex > x.length) {myIndex = 1}
-      x[myIndex-1].style.display = "block";
-      setTimeout(carousel, 5000); // Change image every 2 seconds
-  }
-  </script>
-      <!--  <h1>Profesionales Expertos en Tecnologías Web</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
-      </div> -->
-    </section>
-
-    <section id="boletin">
-      <div class="contenedor">
-        <h1>Subscríbete a nuestro consultorio</h1>
-        <form>
-          <button type="button" class="boton1" onclick="location.href='contacto.html'">Subscríbete</button>
-          <button type="button" class="boton2" onclick="location.href='login.html'">Iniciar Sesion</button>
-        </form>
+  
+</header>
+  <section class=".container-fluid">
+    <div class="row" style="background-color:blueviolet" >
+      <div class="col-md-4 jumbotron" style="background-color:white">
+        <img src="./img/send.png">
+        <h4>Facil de contacto</h4>
+        <h6>Conectate con personas que comparten tus intereses</h6>
       </div>
-    </section>
-
-    <section id="cajas">
-      <div class="contenedor">
-        <div class="caja">
-          <img src="./img/send.png">
-          <h3>Falcil de contacto</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
-        </div>
-        <div class="caja">
-          <img src="./img/star.png">
-          <h3>Unico en servicios</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
-        </div>
-        <div class="caja">
-          <img src="./img/save.png">
-          <h3>Llevamos Seguimiento</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
-        </div>
+      <div class="col-md-4 jumbotron" style="background-color:white">
+        <img src="./img/star.png">
+        <h4>Unico en servicios</h4>
+        <h6>Estamos convencidos que todos tenemos las mismas oportunidades.</h6>
       </div>
-    </section>
+      <div class="col-md-4 jumbotron" style="background-color:white"> 
+        <img src="./img/save.png">
+        <h4>Llevamos Seguimiento</h4>
+        <h6>Almacena tu CV para que mas empresas puedan conocerte.</h6>
+      </div>
+    </div>
+  </section>
+  <footer class="bg-primary navbar">
+    <p>Ky Works, Copyright &copy; 2018</p>
+  </footer>
+</body>
+<script src="js/pooper.min.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
-    <footer>
-      <p>EndoClinic, Copyright &copy; 2017</p>
-    </footer>
-  </body>
 </html>
