--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/animate.min.css">
-<title>Ky Works | Iniciar Sesion</title>
+  <link rel="stylesheet" href="css/animate.min.css">
+  <title>Ky Works | Iniciar Sesion</title>
 </head>
 
 <body>
@@ -15,15 +15,14 @@
         <div class="row">
           <div class="col-md-12">
             <div class="row">
-              <div class="col-md-11 ml-1" style=""><img class="img-fluid d-block rounded" src="img/Sin título-1.png" width="70
-80
-80" height="80" style="">
+              <div class="col-md-11 ml-1" style=""><img class="img-fluid d-block rounded" src="img/Sin título-1.png" width="70 80 80" height="80" style="">
                 <p class="mb-0">WORKS</p>
               </div>
             </div>
           </div>
         </div>
-      </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar16">
+      </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
+        data-target="#navbar16">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar16">
@@ -39,28 +38,33 @@
 
 
 
-  
-  
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">     
-              <form class="form-group jumbotron">
-                <h3 class="animated flash"> INICIA SESION</h3>
-                <div class="form-group"> 
-                <label>Correo</label>
-               <input type="email" class="form-control" placeholder="Introduce tu email" required="required"> 
-                <label>Contraseña</label> 
-                <input type="password" class="form-control" placeholder="Contraseña" required="true"> </div>
-               <button type="submit" class="btn btn-primary">Entrar</button>
-              <p class="small">Si aun no te has registrado da <a href="www.google.com">click aqui.</a></p>
-              </form>
-            </div>   
-          </div>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <form class="form-group jumbotron">
+          <h3 class="animated flash"> INICIA SESION</h3>
+          <div class="form-group">
+            <label>Correo</label>
+            <input type="email" class="form-control" placeholder="Introduce tu email" required="required">
+            <label>Contraseña</label>
+            <input type="password" class="form-control" placeholder="Contraseña" required="true"> </div>
+          <button type="submit" class="btn btn-primary">Entrar</button>
+          <p class="small">Si aun no te has registrado da <a href="www.google.com">click aqui.</a></p>
+        </form>
+      </div>
+      <div class="col-md-6">
+        <div class="img-fluid d-block rounded">
+          <img class="mySlides" src="img/baner1.png">
+          <img class="mySlides" src="img/baner2.png">
+          <img class="mySlides" src="img/baner3.png">
+          <p class="ml-2">Somos una empresa interesada en promover tus habilidades.</p>
         </div>
-  <
-  
-  
-  </body>
+      </div>
+    </div>
+  </div>
+    </body>
 <script src="js/pooper.min.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -84,4 +88,5 @@
     setTimeout(carousel, 3500); // Cambia cada 3.5 segundos 
   }
 </script>
+
 </html>
